fix: address security vulnerabilities across server and client
Add helmet for security headers, restrict CORS to dev-only, enforce
JSON body size limit, and add global error handler. Harden file uploads
with extension whitelist and path traversal guards. Add input length
limits, URL scheme validation, and stage validation on notes. Sanitize
markdown output with DOMPurify and add rel="noopener noreferrer" to
external links. Remove legacy unclaimed app migration code. Run Docker
container as non-root user with NODE_ENV=production.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     expose:
       - "3000"
     environment:
+      - NODE_ENV=production
       - ADMIN_EMAILS=${ADMIN_EMAILS:-}
     volumes:
       - ./data:/app/data
