--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.0",
+    "dompurify": "^3.3.1",
     "marked": "^17.0.3",
     "vue": "^3.5.0",
     "vuedraggable": "^4.1.0"
