--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2"
   },
   "devDependencies": {
